# sira-dagster-core

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-bake.hcl  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt  tox.ini
.github/workflows/: docker-build.yml  test.yml
core/dagster_home/: dagster.yaml  workspace.yaml
tests/: requirements-test.txt  test_container.py
