[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagster-core"
version = "1.0.0"
description = "Production-ready Docker deployment setup for Dagster Core"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Sira Data Team", email = "info@sira.ai" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core dependencies with pinned versions for stability
    "dagster==1.10.10",
    "dagster-webserver==1.10.10",
    "dagster-postgres==0.26.10",
    "dagster-aws==0.26.10",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-cov==4.1.0",

    # Linting and Formatting
    "black==24.1.1",
    "ruff==0.3.0",
    "isort==5.13.0",
]

[tool.dagster]
module_name = "sira_dagster_core"

[tool.hatch.build.targets.wheel]
packages = ["sira_dagster_core"]

[tool.black]
line-length = 150
preview = true
target-version = ['py312']

[tool.ruff]
line-length = 150
target-version = "py312"
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.ruff.lint]
extend-ignore = [
    "F401",   # Unused import - We stub some files with just imports
    "I001",   # Import block sorting - We prefer imports in order of use
    "TID252", # Relative imports are acceptable in examples & docs
    "E501",   # Line length - We're using Black's line length instead
]

[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
force-multiline = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
